--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,4 @@
 server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
-
-        root /var/www/html;
-        index index.html index.htm index.nginx-debian.html;
-
-        server_name _;
-
-        location / {
-                try_files $uri $uri/ =404;
-        }
+        server_name arvisoft.cl;
+        root /home/rodrigo/devportfolio-template
 }
