--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,5 @@
 server {
         server_name arvisoft.cl;
-        root /home/rodrigo/devportfolio-template
+        listen 80;
+        root /home/rodrigo/devportfolio-template;
 }
