--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,22 @@
 server {
         server_name arvisoft.cl;
-        listen 80;
         root /home/rodrigo/devportfolio-template;
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/arvisoft.cl/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/arvisoft.cl/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}server {
+    if ($host = arvisoft.cl) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+        server_name arvisoft.cl;
+        listen 80;
+    return 404; # managed by Certbot
+
+
 }
