Default server name

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 server {
-        server_name arvisoft.cl;
+        server_name arvisoft.cl 000.arvisoft.cl;
+
         root /home/rodrigo/devportfolio-template;
 
     listen 443 ssl; # managed by Certbot
