--- a/nginx.conf
+++ b/nginx.conf
@@ -20,3 +20,10 @@ server {
 
 
 }
+
+server {
+    listen 80 default_server;
+    server_name _;
+
+    root /home/rodrigo/devportfolio-template;
+}
