--- a/nginx.conf
+++ b/nginx.conf
@@ -21,9 +21,9 @@ server {
 
 }
 
-server {
-    listen 80 default_server;
-    server_name _;
+# server {
+#     listen 80 default_server;
+#     server_name _;
 
-    root /home/rodrigo/devportfolio-template;
-}
+#     root /home/rodrigo/devportfolio-template;
+# }
