--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,8 @@
 server {
-        server_name arvisoft.cl;
+        server_name arvisoft.cl _;
         root /home/rodrigo/devportfolio-template;
 
-    listen 443 ssl; # managed by Certbot
+    listen 443 ssl default_server; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/arvisoft.cl/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/arvisoft.cl/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
